# devtool-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  VISUAL_REGRESSION_SPEC.md  go.mod  go.sum  init.sh  install.sh  package.json  progress.txt  server.json  tasks.json
.claude-plugin/: marketplace.json
.claude/commands/: release.md
.claude/tasks/: audit-overhaul.md
.github/workflows/: publish-pypi.yml  release.yml  test-install.yml  test-windows.yml
assets/: sketch-demo-part2.webm
cmd/agnt/: completion.go  daemon.go  exec_unix.go  exec_windows.go  main.go  overlay.go  project.go  run.go  run_test.go  run_windows.go  serve.go  up.go  upgrade.go
docs/: blog-post.md  daemon-architecture.md  mcp-servers-submission.md  social-media.md  visual-regression-usage.md
docs-site/: sidebars.ts
docs-site/docs/api/: proxy.md  tunnel.md
docs-site/docs/api/frontend/: css-evaluation.md  layout-robustness.md  overview.md  quality-auditing.md  security-validation.md
docs-site/docs/features/: reverse-proxy.md
docs-site/docs/use-cases/: mobile-testing.md
docs/articles/: win32-input-mode-conpty.md
examples/: diagnostics-demo.html
internal/aichannel/: RESEARCH.md  adapter.go  adapter_test.go  anthropic.go  anthropic_test.go  channel.go  channel_test.go  integration_test.go  langchain.go  langchain_test.go  provider.go  response.go  response_test.go
internal/automation/: processor.go  prompts.go  tasks.go
internal/config/: agnt.go  agnt_test.go  config.go  kdl.go  portdetect.go
internal/daemon/: autostart.go  autostart_test.go  client.go  client_test.go  conn.go  conn_test.go  connection.go  currentpage_test.go  daemon.go  handler.go  hub_handlers.go  normalize_test.go  resilient.go  resilient_test.go  resilient_version_test.go  scheduler_state_test.go  session.go  session_test.go  socket_compat.go  socket_compat_test.go  socket_compat_windows.go  socket_test.go  socket_windows.go  startup_resilience.go  startup_resilience_test.go  state.go  state_test.go  upgrade.go  upgrade_integration_test.go  upgrade_unit_test.go  urltracker.go  urltracker_test.go  version.go  version_test.go
internal/license/: license.go
internal/overlay/: auditsummarizer.go  filter.go  input.go  menu.go  overlay.go  overlay_test.go  render.go  screen.go  status.go  summarizer.go  summarizer_test.go
internal/process/: lifecycle.go  lifecycle_test.go  lifecycle_unix.go  lifecycle_windows.go  manager.go  process.go
internal/project/: detector.go
internal/protocol/: commands.go  hub.go  parser.go  parser_test.go  responses.go
internal/proxy/: audit_storage.go  chaos.go  chaos_presets.go  chaos_test.go  chaos_transport.go  chaos_writers.go  compression_test.go  injector.go  integration_test.go  logger.go  manager.go  manager_test.go  overlay.go  pagetracker.go  pagetracker_test.go  port_test.go  rewrite_test.go  server.go  tunnel.go  tunnel_test.go  voice.go
internal/proxy/scripts/: accessibility.js  api-tracker.js  api.js  audit.js  capture.js  content.js  core.js  design.js  diagnostics.js  embed.go  framework-detector.js  indicator.js  inspection.js  interaction.js  interactive.js  layout.js  mutation.js  overlay.js  recorder.js  sketch.js  tree.js  utils.js  visual.js  voice.js
internal/snapshot/: differ.go  manager.go  storage.go  types.go
internal/tools/: apidocs.go  daemon_tools.go  daemon_tools_test.go  process.go  proxy_tools.go  snapshot.go  tunnel_tools.go
internal/tunnel/: manager.go  tunnel.go  tunnel_test.go
internal/updater/: checker.go  github.go  github_test.go
npm/agnt/: README.md  package.json
npm/agnt/scripts/: install.js
npm/devtool-mcp/: package.json
plugins/agnt/: README.md  mcp.json
plugins/agnt/.claude-plugin/: plugin.json
plugins/agnt/commands/: setup-project.md
python/: README.md  pyproject.toml
python/agnt/: README.md  pyproject.toml
python/agnt/src/agnt/: __init__.py
python/src/devtool_mcp/: __init__.py
scripts/: build-test-binaries.ps1  install.js  prepack.js  release.sh  test-reconnect.ps1  test-upgrade.ps1
