[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devtool-mcp"
version = "0.9.0"
description = "DEPRECATED: This package has been renamed to 'agnt'. Please install 'agnt' instead."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Standard Beagle", email = "dev@standardbeagle.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai",
    "development",
    "devtools",
    "proxy",
    "debugging",
    "frontend",
    "diagnostics",
    "accessibility",
    "process-management",
    "deprecated"
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "agnt>=0.9.0",
]

[project.urls]
Homepage = "https://standardbeagle.github.io/agnt/"
Documentation = "https://standardbeagle.github.io/agnt/"
Repository = "https://github.com/standardbeagle/agnt"
Issues = "https://github.com/standardbeagle/agnt/issues"
Changelog = "https://github.com/standardbeagle/agnt/blob/main/CHANGELOG.md"

[project.scripts]
devtool-mcp = "devtool_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/devtool_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
