[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agnt"
version = "0.7.12"
description = "MCP server for AI coding agents - process management, reverse proxy with traffic logging, browser instrumentation, and sketch mode"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Standard Beagle", email = "dev@standardbeagle.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai",
    "agent",
    "development",
    "devtools",
    "proxy",
    "debugging",
    "frontend",
    "diagnostics",
    "sketch",
    "wireframe",
    "process-management",
    "claude-code"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://standardbeagle.github.io/agnt/"
Documentation = "https://standardbeagle.github.io/agnt/"
Repository = "https://github.com/standardbeagle/agnt"
Issues = "https://github.com/standardbeagle/agnt/issues"
Changelog = "https://github.com/standardbeagle/agnt/blob/main/CHANGELOG.md"

[project.scripts]
agnt = "agnt:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agnt"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
